[profile.release]
lto = true

[profile.release.package.anchor-cli]
codegen-units = 1

[workspace]
members = [
    "avm",
    "cli",
    "client",
    "lang",
    "lang/attribute/*",
    "lang/derive/*",
    "lang/syn",
    "spl",
]
exclude = [
    "tests/swap/deps/openbook-dex",
    "tests/cfo/deps/openbook-dex",
]

[patch.crates-io]
solana-program = { git = "https://github.com/tinydancer-io/solana-1.18", branch="v1.18.7-branch", version="1.18.7"} 
solana-zk-token-sdk = { git = "https://github.com/tinydancer-io/solana-1.18" ,branch="v1.18.7-branch", version="1.18.7"}
solana-sdk = { git = "https://github.com/tinydancer-io/solana-1.18", branch="v1.18.7-branch", version="1.18.7"}
