[package]
name = "anchor-client"
version = "0.28.0"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
rust-version = "1.60"
edition = "2021"
license = "Apache-2.0"
description = "Rust client for Anchor programs"

[features]
debug = []
async = []

[dependencies]
anchor-lang = { path = "../lang", version = "0.28.0" }
anyhow = "1"
futures = { version = "0.3" }
regex = "1"
serde = { version = "1", features = ["derive"] }
solana-client = ">=1.14,<=1.18.7"
solana-sdk = ">=1.14,<=1.18.7"
solana-account-decoder = ">=1.14,<=1.18.7"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync"] }
url = "2"

[patch.crates-io]
solana-program = { git = "https://github.com/tinydancer-io/solana-1.18", branch="v1.18.7-branch", version="1.18.7"} 
solana-zk-token-sdk = { git = "https://github.com/tinydancer-io/solana-1.18" ,branch="v1.18.7-branch", version="1.18.7"}
solana-sdk = { git = "https://github.com/tinydancer-io/solana-1.18", branch="v1.18.7-branch", version="1.18.7"}
